--- a/06 - Type Ahead/index-START.html
+++ b/06 - Type Ahead/index-START.html
@@ -8,24 +8,24 @@
 <body>
 
   <form class="search-form">
-    <input type="text" class="search" placeholder="City or Region">
+    <input type="text" class="search" placeholder="City or Subject">
     <ul class="suggestions">
       <li>Filter for a city</li>
-      <li>or a region</li>
+      <li>or a subject</li>
     </ul>
   </form>
 <script>
 const endpoint = 'https://raw.githubusercontent.com/pensnarik/russian-cities/master/russian-cities.json';
 
-const cities = [];
+const names = [];
 fetch(endpoint)
   .then(blob => blob.json())
   .then(data =>cities.push(...data));
 
-  function findMatches(wordToMatch, cities) {
-    return cities.filter(place => {
+  function findMatches(wordToMatch, names) {
+    return names.filter(place => {
       const regex = new RegExp(wordToMatch, 'gi');
-      return place.city.match(regex) || place.region.match(regex)
+      return place.name.match(regex) || place.subject.match(regex)
     });
   }
 
@@ -34,12 +34,15 @@ fetch(endpoint)
   }
 
   function displayMatches() {
-    const matchArray = findMatches(this.value, cities);
+    const matchArray = findMatches(this.value, names);
     const html = matchArray.map(place => {
       const regex = new RegExp(this.value, 'gi');
-      const cityName = place.city.replace(regex, `<span class="h1">${this.value}</span>`);
-      const regionName = place.region.replace(regex, `<span class="h1">${this.value}</span>`);
+      const cityName = place.name.replace(regex, `<span class="h1">${this.value}</span>`);
+      const stateName = place.subject.replace(regex, `<span class="h1">${this.value}</span>`);
       return `
+      <li>
+        <span class="name">${cityName}, ${stateName}</span>
+        <span class="population">${numberWithCommas(place.population)}</span>
       </li>
       `;
     }).join('');
